fix: tooltip z-index

--- a/src/components/SupportCreator/styles.module.scss
+++ b/src/components/SupportCreator/styles.module.scss
@@ -23,6 +23,7 @@
   padding: 0.25rem 0.375rem;
   border: 1px solid rgba(184, 186, 190, 0.3);
   box-shadow: 0 0 1rem 0.125rem rgba(0, 0, 0, 0.048);
+  z-index: 2;
 }
 
 .tooltipText {
